--- a/src/web_graph_eda.ipynb
+++ b/src/web_graph_eda.ipynb
@@ -2,17 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-07T18:52:39.101403Z",
-     "start_time": "2025-10-07T18:52:39.097706Z"
+     "end_time": "2025-10-07T19:19:44.425272Z",
+     "start_time": "2025-10-07T19:19:37.199548Z"
     },
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\r\n",
+      "  Using cached matplotlib-3.10.6-cp313-cp313-macosx_11_0_arm64.whl.metadata (11 kB)\r\n",
+      "Collecting contourpy>=1.0.1 (from matplotlib)\r\n",
+      "  Downloading contourpy-1.3.3-cp313-cp313-macosx_11_0_arm64.whl.metadata (5.5 kB)\r\n",
+      "Collecting cycler>=0.10 (from matplotlib)\r\n",
+      "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\r\n",
+      "Collecting fonttools>=4.22.0 (from matplotlib)\r\n",
+      "  Downloading fonttools-4.60.1-cp313-cp313-macosx_10_13_universal2.whl.metadata (112 kB)\r\n",
+      "Collecting kiwisolver>=1.3.1 (from matplotlib)\r\n",
+      "  Downloading kiwisolver-1.4.9-cp313-cp313-macosx_11_0_arm64.whl.metadata (6.3 kB)\r\n",
+      "Requirement already satisfied: numpy>=1.23 in /Users/wnowogorski/Library/Caches/pypoetry/virtualenvs/chatagh-data-collecting-fbzQknWL-py3.13/lib/python3.13/site-packages (from matplotlib) (2.3.3)\r\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/wnowogorski/Library/Caches/pypoetry/virtualenvs/chatagh-data-collecting-fbzQknWL-py3.13/lib/python3.13/site-packages (from matplotlib) (25.0)\r\n",
+      "Requirement already satisfied: pillow>=8 in /Users/wnowogorski/Library/Caches/pypoetry/virtualenvs/chatagh-data-collecting-fbzQknWL-py3.13/lib/python3.13/site-packages (from matplotlib) (11.3.0)\r\n",
+      "Collecting pyparsing>=2.3.1 (from matplotlib)\r\n",
+      "  Using cached pyparsing-3.2.5-py3-none-any.whl.metadata (5.0 kB)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/wnowogorski/Library/Caches/pypoetry/virtualenvs/chatagh-data-collecting-fbzQknWL-py3.13/lib/python3.13/site-packages (from matplotlib) (2.9.0.post0)\r\n",
+      "Requirement already satisfied: six>=1.5 in /Users/wnowogorski/Library/Caches/pypoetry/virtualenvs/chatagh-data-collecting-fbzQknWL-py3.13/lib/python3.13/site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\r\n",
+      "Downloading matplotlib-3.10.6-cp313-cp313-macosx_11_0_arm64.whl (8.1 MB)\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.1/8.1 MB\u001b[0m \u001b[31m9.3 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m\r\n",
+      "\u001b[?25hDownloading contourpy-1.3.3-cp313-cp313-macosx_11_0_arm64.whl (274 kB)\r\n",
+      "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\r\n",
+      "Downloading fonttools-4.60.1-cp313-cp313-macosx_10_13_universal2.whl (2.8 MB)\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\n",
+      "\u001b[?25hDownloading kiwisolver-1.4.9-cp313-cp313-macosx_11_0_arm64.whl (64 kB)\r\n",
+      "Using cached pyparsing-3.2.5-py3-none-any.whl (113 kB)\r\n",
+      "Installing collected packages: pyparsing, kiwisolver, fonttools, cycler, contourpy, matplotlib\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6/6\u001b[0m [matplotlib]6\u001b[0m [matplotlib]\r\n",
+      "\u001b[1A\u001b[2KSuccessfully installed contourpy-1.3.3 cycler-0.12.1 fonttools-4.60.1 kiwisolver-1.4.9 matplotlib-3.10.6 pyparsing-3.2.5\r\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip install matplotlib\n",
     "import json\n",
     "import glob\n",
     "from urllib.parse import urlparse\n",
@@ -826,18 +862,18 @@
    },
    "outputs": [],
    "source": [
-    "# clusters = graph[\"cluster\"].unique()\n",
-    "# for cluster in clusters:\n",
-    "#     cluster_df = graph[graph[\"cluster\"] == int(cluster)]\n",
-    "#     cluster_urls = list(cluster_df[\"source\"].unique())\n",
-    "#     json_to_save = {\n",
-    "#         \"cluster\": int(cluster),\n",
-    "#         \"cluster_urls\": cluster_urls,\n",
-    "#     }\n",
-    "#     with open(f\"cluster_{cluster}.json\", \"w\") as f:\n",
-    "#         json.dump(json_to_save, f)\n",
-    "#\n",
-    "# graph.to_json(\"graph.json\")"
+    "clusters = graph[\"cluster\"].unique()\n",
+    "for cluster in clusters:\n",
+    "    cluster_df = graph[graph[\"cluster\"] == int(cluster)]\n",
+    "    cluster_urls = list(cluster_df[\"source\"].unique())\n",
+    "    json_to_save = {\n",
+    "        \"cluster\": int(cluster),\n",
+    "        \"cluster_urls\": cluster_urls,\n",
+    "    }\n",
+    "    with open(f\"cluster_{cluster}.json\", \"w\") as f:\n",
+    "        json.dump(json_to_save, f)\n",
+    "\n",
+    "graph.to_json(\"graph.json\")"
    ]
   },
   {
